Understand comple parallel workflow in langGraph and  work of reducer fxn in langgraph

--- a/LangGraph/2_simple_llm_work_flow.ipynb
+++ b/LangGraph/2_simple_llm_work_flow.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "b9cca4ae",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "8660d799",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "2b8f4673",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "28e9a632",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'question': 'How far is India from USA?', 'answer': 'The distance between India and the USA varies depending on the locations being compared. On average, the distance between the two countries is around 8,000 miles (12,875 kilometers) when measuring from major cities like New York City to New Delhi.'}\n"
+      "{'question': 'How far is India from USA?', 'answer': 'India is approximately 8,353 miles away from the USA.'}\n"
      ]
     }
    ],
@@ -125,8 +125,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5baeb72a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The distance between India and the USA varies depending on the cities being compared. For example, the distance between New Delhi, India, and New York City, USA, is approximately 7,800 miles (12,552 kilometers) when measured in a straight line.'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.invoke(\"How far is India from USA?\").content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdc3ac7f",
    "metadata": {},
    "outputs": [],
    "source": []
