--- a/LangGraph/0_test_installation.ipynb
+++ b/LangGraph/0_test_installation.ipynb
@@ -2,18 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b993a5b3",
    "metadata": {},
    "outputs": [],
    "source": [
     "from langgraph.graph import StateGraph"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5ac509e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "langchain-env",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
